--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <head>
     <meta charset="utf-8" />
     <title>Toastmaster Speech Ter</title>
-    <meta description="Practice your speech with confidence. This timer can be used to practice any speech type. It was originally created for practicing Toastmaster speeches. Large font and big colors enable you to see it from a distance."/>
+    <meta
+      description="Practice your speech with confidence. This timer can be used to practice any speech type. It was originally created for practicing Toastmaster speeches. Large font and big colors enable you to see it from a distance." />
     <link href="/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
 
@@ -30,7 +31,7 @@
       <section class="content-wrapper">
         <h1 style="margin-bottom: 20px;"> Timer para Presentaciones </h1>
 
-        <div>
+        <div class="container">
           <div class="row" id="buttons" style="font-size: large"></div>
           <br />
 
@@ -51,15 +52,17 @@
                 value="Start">Start</button>
             </div>
             <div class="col-sm-2 col-md-2">
-              <button class="btn btn-default btn-lg" id="btnReset" type="button" value="Reset">Reset</button>
+              <button class="btn btn-danger btn-lg" id="btnReset" type="button" value="Reset">Reset</button>
             </div>
           </div>
           <br />
 
-          <div>
-            <label class="label label-default"><input type="checkbox" id="showDigits" name="showDigits"
-                value="showDigits" checked="checked" title="Se deshabilitarán los número del timer">Mostrar
-              Timer</label>
+          <div class="row">
+            <div class="form-check">
+              <input type="checkbox" id="showDigits" name="showDigits" value="showDigits" checked="checked"
+                title="Se deshabilitarán los número del timer">
+              <label class="label label-default" for="showDigits">Mostrar Timer</label>
+            </div>
           </div>
 
           <div class="row" id="trafficlight" style="font-size: 28em;line-height:400px">
